--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.6.0"
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@chakra-ui/cli": "^3.19.1",
@@ -32,6 +33,7 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
+    "vite-plugin-svgr": "^4.3.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
