--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@chakra-ui/react": "^3.19.1",
     "@emotion/react": "^11.14.0",
     "@fontsource/be-vietnam-pro": "^5.2.5",
-    "motion": "^12.12.1",
+    "aos": "^2.3.4",
+    "motion": "^12.18.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
